# tailorfs

./: .gitignore  .gitmodules  .gitpod.yml  CMakeLists.txt  Dockerfile  LICENSE  compose-dev.yaml  main.cpp  manifest.scm  spack.yaml
CMake/: Findunifyfs.cmake
dependency/: install.sh  spack.yaml
environment/: Dockerfile
reproduce/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
scripts/: .nfs804502ba01fda7d400010c9a  calculate_benefit.sh  calculate_motivation.sh  main.sh  paper_anatomy.sh  paper_anatomy.sh_1_1_shared.out  paper_benefit.csv  paper_benefit.sh  paper_benefit.sh_16_1024.out  paper_benefit.sh_16_4.out  paper_benefit.sh_16_64.out  paper_benefit.sh_1_1024.out  paper_benefit.sh_1_4.out  paper_benefit.sh_1_64.out  paper_benefit.sh_2_1024.out  paper_benefit.sh_2_4.out  paper_benefit.sh_2_64.out  paper_benefit.sh_32_4.out  paper_benefit.sh_32_64.out  paper_benefit.sh_4_1024.out  paper_benefit.sh_4_4.out  paper_benefit.sh_4_64.out  paper_benefit.sh_64_64.out  paper_benefit.sh_8_1024.out  paper_benefit.sh_8_4.out  paper_benefit.sh_8_64.out  paper_init_throughput.sh  paper_init_throughput.sh_1_1_shared.out  paper_init_throughput.sh_32_1_shared.out  (+16 more)
test/: CMakeLists.txt  catch_config.h  test_utils.h
test/internal/: CMakeLists.txt  internal_test.cpp
test/micro_benchmark/: CMakeLists.txt  io_tests.cpp
test/mimir/: CMakeLists.txt  mimir_test.cpp
test/mimir/json_files/lassen/: .mimir_config_16_32_1_1024_1024_fpp_seq_wo_all.json.swp  mimir_config_128_32_1_1024_1024_fpp_random_raw_all.json  mimir_config_128_32_1_1024_1024_fpp_random_raw_alt.json  mimir_config_128_32_1_1024_1024_fpp_random_raw_split.json  mimir_config_128_32_1_1024_1024_fpp_random_ro_all.json  mimir_config_128_32_1_1024_1024_fpp_random_update_all.json  mimir_config_128_32_1_1024_1024_fpp_random_worm_all.json  mimir_config_128_32_1_1024_1024_fpp_random_worm_alt.json  mimir_config_128_32_1_1024_1024_fpp_random_worm_split.json  mimir_config_128_32_1_1024_1024_fpp_seq_raw_all.json  mimir_config_128_32_1_1024_1024_fpp_seq_raw_alt.json  mimir_config_128_32_1_1024_1024_fpp_seq_raw_split.json  mimir_config_128_32_1_1024_1024_fpp_seq_ro_all.json  mimir_config_128_32_1_1024_1024_fpp_seq_update_all.json  mimir_config_128_32_1_1024_1024_fpp_seq_wo_all.json  mimir_config_128_32_1_1024_1024_fpp_seq_worm_all.json  mimir_config_128_32_1_1024_1024_fpp_seq_worm_alt.json  mimir_config_128_32_1_1024_1024_fpp_seq_worm_split.json  mimir_config_16_32_1_1024_1024_fpp_random_raw_all.json  mimir_config_16_32_1_1024_1024_fpp_random_raw_alt.json  mimir_config_16_32_1_1024_1024_fpp_random_raw_split.json  mimir_config_16_32_1_1024_1024_fpp_random_ro_all.json  mimir_config_16_32_1_1024_1024_fpp_random_update_all.json  mimir_config_16_32_1_1024_1024_fpp_random_wo_all.json  mimir_config_16_32_1_1024_1024_fpp_random_worm_all.json  mimir_config_16_32_1_1024_1024_fpp_random_worm_alt.json  mimir_config_16_32_1_1024_1024_fpp_random_worm_split.json  mimir_config_16_32_1_1024_1024_fpp_seq_raw_all.json  mimir_config_16_32_1_1024_1024_fpp_seq_raw_alt.json  mimir_config_16_32_1_1024_1024_fpp_seq_raw_split.json  mimir_config_16_32_1_1024_1024_fpp_seq_ro_all.json  mimir_config_16_32_1_1024_1024_fpp_seq_update_all.json  mimir_config_16_32_1_1024_1024_fpp_seq_wo_all.json  mimir_config_16_32_1_1024_1024_fpp_seq_worm_all.json  mimir_config_16_32_1_1024_1024_fpp_seq_worm_alt.json  mimir_config_16_32_1_1024_1024_fpp_seq_worm_split.json  mimir_config_16_32_1_4_1024_fpp_random_raw_all.json  mimir_config_16_32_1_4_1024_fpp_random_raw_alt.json  mimir_config_16_32_1_4_1024_fpp_random_raw_split.json  mimir_config_16_32_1_4_1024_fpp_random_ro_all.json  (+622 more)
test/mimir/json_files/local/: mimir_config.json  mimir_config_1_1_1_1024_1024_fpp_random_raw_all.json  mimir_config_1_1_1_1024_1024_fpp_random_ro_all.json  mimir_config_1_1_1_1024_1024_fpp_random_update_all.json  mimir_config_1_1_1_1024_1024_fpp_random_wo_all.json  mimir_config_1_1_1_1024_1024_fpp_random_worm_all.json  mimir_config_1_1_1_1024_1024_fpp_seq_raw_all.json  mimir_config_1_1_1_1024_1024_fpp_seq_ro_all.json  mimir_config_1_1_1_1024_1024_fpp_seq_update_all.json  mimir_config_1_1_1_1024_1024_fpp_seq_wo_all.json  mimir_config_1_1_1_1024_1024_fpp_seq_worm_all.json  mimir_config_1_1_1_1024_1024_shared_random_raw_all.json  mimir_config_1_1_1_1024_1024_shared_random_ro_all.json  mimir_config_1_1_1_1024_1024_shared_random_update_all.json  mimir_config_1_1_1_1024_1024_shared_random_wo_all.json  mimir_config_1_1_1_1024_1024_shared_random_worm_all.json  mimir_config_1_1_1_1024_1024_shared_seq_raw_all.json  mimir_config_1_1_1_1024_1024_shared_seq_ro_all.json  mimir_config_1_1_1_1024_1024_shared_seq_update_all.json  mimir_config_1_1_1_1024_1024_shared_seq_wo_all.json  mimir_config_1_1_1_1024_1024_shared_seq_worm_all.json  mimir_config_1_1_1_128_1024_fpp_random_raw_all.json  mimir_config_1_1_1_128_1024_fpp_random_ro_all.json  mimir_config_1_1_1_128_1024_fpp_random_update_all.json  mimir_config_1_1_1_128_1024_fpp_random_wo_all.json  mimir_config_1_1_1_128_1024_fpp_random_worm_all.json  mimir_config_1_1_1_128_1024_fpp_seq_raw_all.json  mimir_config_1_1_1_128_1024_fpp_seq_ro_all.json  mimir_config_1_1_1_128_1024_fpp_seq_update_all.json  mimir_config_1_1_1_128_1024_fpp_seq_wo_all.json  mimir_config_1_1_1_128_1024_fpp_seq_worm_all.json  mimir_config_1_1_1_128_1024_shared_random_raw_all.json  mimir_config_1_1_1_128_1024_shared_random_ro_all.json  mimir_config_1_1_1_128_1024_shared_random_update_all.json  mimir_config_1_1_1_128_1024_shared_random_wo_all.json  mimir_config_1_1_1_128_1024_shared_random_worm_all.json  mimir_config_1_1_1_128_1024_shared_seq_raw_all.json  mimir_config_1_1_1_128_1024_shared_seq_ro_all.json  mimir_config_1_1_1_128_1024_shared_seq_update_all.json  mimir_config_1_1_1_128_1024_shared_seq_wo_all.json  (+184 more)
test/scripts/: main_unifyfs_wrapper.sh
test/scripts/lassen/: cleanup.sh  finish.sh  setup.sh  wrap_unifyfs.sh
test/scripts/local/: cleanup.sh  finish.sh  setup.sh  wrap_unifyfs.sh
test/unifyfs/: CMakeLists.txt  README.md  run_single.sh  unifyfs_basic.cpp  unifyfs_run_single.sh
(+67 files in other folders)
